--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.9",
+    "@angular-devkit/build-angular": "^15.0.0",
     "@angular/cli": "^14.2.9",
     "@angular/compiler-cli": "~13.3.0",
+    "@nrwl/workspace": "15.2.1",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
@@ -40,9 +41,8 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.6.2",
-    "@nrwl/workspace": "15.2.1",
     "nx": "15.2.1",
-    "prettier": "^2.6.2"
+    "prettier": "^2.6.2",
+    "typescript": "~4.6.2"
   }
 }
