Nx is so shit i dont ever want to use this again

--- a/apps/meal-delivery/project.json
+++ b/apps/meal-delivery/project.json
@@ -83,19 +83,11 @@
       }
     },
     "test": {
-      "executor": "@angular-devkit/build-angular:karma",
+      "executor": "@nrwl/jest:jest",
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "main": "apps/meal-delivery/src/test.ts",
-        "polyfills": "apps/meal-delivery/src/polyfills.ts",
-        "tsConfig": "apps/meal-delivery/tsconfig.spec.json",
-        "karmaConfig": "apps/meal-delivery/karma.conf.js",
-        "assets": [
-          "apps/meal-delivery/src/favicon.ico",
-          "apps/meal-delivery/src/assets",
-          "apps/meal-delivery/src/_redirects"
-        ],
-        "styles": ["apps/meal-delivery/src/styles.css"],
-        "scripts": []
+        "jestConfig": "apps/meal-delivery/jest.config.ts",
+        "passWithNoTests": true
       }
     }
   }
