--- a/package.json
+++ b/package.json
@@ -22,15 +22,22 @@
     "@angular/router": "~15.0.0",
     "@babel/helper-split-export-declaration": "^7.18.6",
     "@nestjs/common": "^9.0.0",
-    "@nestjs/core": "^9.0.0",
+    "@nestjs/core": "^9.2.0",
     "@nestjs/platform-express": "^9.0.0",
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@nrwl/angular": "^15.2.1",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.3",
+    "path-browserify": "^1.0.1",
+    "querystring-es3": "^0.2.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "tslib": "^2.3.0",
+    "url": "^0.11.0",
+    "util": "^0.12.5",
+    "webpack": "^5.75.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
