--- a/package.json
+++ b/package.json
@@ -23,11 +23,15 @@
     "@babel/helper-split-export-declaration": "^7.18.6",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.2.0",
+    "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^9.0.0",
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@nrwl/angular": "^15.2.1",
     "@popperjs/core": "^2.10.2",
+    "bcrypt": "^5.1.0",
     "bootstrap": "^5.1.3",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.7.3",
     "path-browserify": "^1.0.1",
     "querystring-es3": "^0.2.1",
     "reflect-metadata": "^0.1.13",
@@ -37,6 +41,7 @@
     "tslib": "^2.3.0",
     "url": "^0.11.0",
     "util": "^0.12.5",
+    "uuid": "^9.0.0",
     "webpack": "^5.75.0",
     "zone.js": "~0.11.4"
   },
@@ -56,9 +61,12 @@
     "@nrwl/nest": "15.2.1",
     "@nrwl/node": "15.2.1",
     "@nrwl/workspace": "15.2.1",
+    "@types/bcrypt": "^5.0.0",
     "@types/jasmine": "~3.10.0",
     "@types/jest": "28.1.1",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "18.7.1",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "eslint": "~8.15.0",
