Hard to find e2e but at the end found
Tried myself didnt work, tried to search on google didnt work, etc. etc.

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -21,7 +21,9 @@
     "target": "es2017",
     "module": "es2020",
     "lib": ["es2020", "dom"],
-    "paths": { "@meal-delivery/data": ["libs/data/src/index.ts"] },
+    "paths": {
+      "@meal-delivery/data": ["libs/data/src/index.ts"]
+    },
     "rootDir": "."
   },
   "angularCompilerOptions": {
