--- a/angular.json
+++ b/angular.json
@@ -2,6 +2,7 @@
   "version": 2,
   "projects": {
     "meal-delivery": "apps/meal-delivery",
-    "meal-delivery-api": "apps/meal-delivery-api"
+    "meal-delivery-api": "apps/meal-delivery-api",
+    "meal-delivery-e2e": "apps/meal-delivery-e2e"
   }
 }
