--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@popperjs/core": "^2.10.2",
     "bcrypt": "^5.1.0",
     "bootstrap": "^5.1.3",
+    "cypress": "^11.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.3",
     "path-browserify": "^1.0.1",
@@ -71,6 +72,7 @@
     "@typescript-eslint/parser": "^5.36.1",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cypress": "^2.10.3",
     "jasmine-core": "~4.0.0",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
