--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -1,45 +1,35 @@
-#
-# GitLab example CI/CD script
-# See https://docs.gitlab.com/ee/ci/yaml/README.html
-#
-# Secure Variables like $DB_PASSWORD can added by going to your
-# project’s Settings ➔ CI / CD ➔ Variables on the GitLab website.
-#
-image: node:latest
+name: Deploy to Heroku
 
-stages:
-  # - test
-  # - metrics
-  - deploy
+on:
+  push:
+    branches:
+      - main
 
-cache:
-  key: $CI_COMMIT_REF_SLUG
-  paths:
-    - node_modules
+jobs:
+  integrationtests:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
 
-#
-# Global variables
-#
-# variables:
-#   DOCKER_HOST: tcp://docker:2375/
-#   DOCKER_DRIVER: overlay2
+      - name: npm install, build, and test
+        run: |
+          npm install --force
+          npm run build --if-present
+          npm run test --if-present
 
-#
-# Deploy to Heroku
-#
-Deployment:
-  type: deploy
-  stage: deploy
-  image: ruby:latest
-  script:
-    # Get your key at https://dashboard.heroku.com/account
-    # and add it to your project environment variables at GitLab.
-    - echo "Heroku api key = $HEROKU_API_KEY"
-    # The name of your app at Heroku. See https://dashboard.heroku.com/apps.
-    - echo "Heroku appname = $HEROKU_APP_NAME"
-    - apt-get update -qy
-    - apt-get install -y ruby-dev
-    - gem install dpl
-    - dpl --provider=heroku --app=$HEROKU_APP_NAME --api-key=$HEROKU_API_KEY
-  only:
-    - main
+      - name: Zip artifact for deployment
+        run: zip release.zip ./* -r
+
+  deploy:
+    needs: integrationtests
+    runs-on: ubuntu-latest
+    environment:
+      name: Heroku
+    steps:
+      - name: unzip artifact from build job
+        run: unzip release.zip
+      - uses: actions/checkout@v2
+      - uses: akhileshns/heroku-deploy@v3.12.12
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: meal-delivery-api
