--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "nx",
-    "start": "nx serve",
-    "build": "nx build",
-    "watch": "nx build --watch --configuration development",
-    "test": "nx test",
+    "start": "npx nx serve",
+    "build": "npx nx build",
+    "watch": "npx nx build --watch --configuration development",
+    "test": "npx nx test",
     "postinstall": "node ./decorate-angular-cli.js"
   },
   "private": true,
