--- a/.github/workflows/main_meal-delivery-api.yml
+++ b/.github/workflows/main_meal-delivery-api.yml
@@ -40,7 +40,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'production'
+      name: 'Development'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
@@ -57,6 +57,5 @@ jobs:
         uses: azure/webapps-deploy@v2
         with:
           app-name: 'meal-delivery-api'
-          slot-name: 'production'
           publish-profile: ${{ secrets.AzureAppService_PublishProfile_30c979a63c384d259847c7c7bbad759f }}
           package: .
