--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,7 @@
 {
   "version": 2,
   "projects": {
+    "data": "libs/data",
     "meal-delivery": "apps/meal-delivery",
     "meal-delivery-api": "apps/meal-delivery-api",
     "meal-delivery-e2e": "apps/meal-delivery-e2e"
