--- a/apps/meal-delivery-e2e/.eslintrc.json
+++ b/apps/meal-delivery-e2e/.eslintrc.json
@@ -4,7 +4,11 @@
   "overrides": [
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
-      "rules": {}
+      "rules": {
+        "@typescript-eslint/no-namespace": "off",
+        "@typescript-eslint/no-unused-vars": "off",
+        "@angular-eslint/no-empty-lifecycle-method": "off"
+      }
     }
   ]
 }
