--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/core": "^9.2.0",
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^9.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^13.1.1",
     "@nrwl/angular": "^15.2.1",
     "@nrwl/js": "^14.8.6",
     "@nrwl/nx-cloud": "^15.0.2",
