--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bootstrap": "^5.2.3",
     "cypress": "^11.2.0",
     "jsonwebtoken": "^8.5.1",
+    "meal-delivery": "file:meal-delivery-0.0.0.tgz",
     "mongoose": "^6.7.3",
     "path-browserify": "^1.0.1",
     "querystring-es3": "^0.2.1",
