Hopefully not breaking my whole application CustumConfig
BRUH WHY DOES MARGIN NOT WORK ON ALERTS

--- a/apps/meal-delivery/tsconfig.app.json
+++ b/apps/meal-delivery/tsconfig.app.json
@@ -3,7 +3,9 @@
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
     "esModuleInterop": true,
-    "types": []
+    "types": [
+      "@angular/localize"
+    ]
   },
   "files": ["src/main.ts", "src/polyfills.ts"],
   "include": ["src/**/*.d.ts"]
