--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   "dependencies": {
     "@angular/animations": "~15.0.0",
     "@angular/common": "~15.0.0",
-    "@angular/compiler": "~15.0.0",
-    "@angular/core": "~15.0.0",
+    "@angular/compiler": "^15.0.1",
+    "@angular/core": "^15.0.1",
     "@angular/forms": "~15.0.0",
-    "@angular/localize": "^15.0.2",
+    "@angular/localize": "^15.0.1",
     "@angular/platform-browser": "~15.0.0",
     "@angular/platform-browser-dynamic": "~15.0.0",
     "@angular/router": "~15.0.0",
@@ -25,7 +25,7 @@
     "@nestjs/core": "^9.2.0",
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^9.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^13.1.1",
+    "@ng-bootstrap/ng-bootstrap": "^14.0.0",
     "@nrwl/angular": "^15.2.1",
     "@nrwl/js": "^14.8.6",
     "@nrwl/nx-cloud": "^15.0.2",
@@ -54,7 +54,7 @@
     "@angular-eslint/eslint-plugin-template": "~14.0.4",
     "@angular-eslint/template-parser": "~14.0.4",
     "@angular/cli": "~15.0.0",
-    "@angular/compiler-cli": "~15.0.0",
+    "@angular/compiler-cli": "^15.0.1",
     "@angular/language-service": "~15.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
