Railway is 10000x better than Azure and Netlify is <3

--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -8,8 +8,10 @@
 #   AZURE_WEBAPP_PACKAGE_PATH: '.'
 #   NODE_VERSION: '18.x'
 
-# permissions:
-#   contents: read
+# permissions:      -------------Railway is 10000x beter dan Azure en Netlify is <3-------------
+#   contents: read           ---  https://meal-delivery-api.up.railway.app/   ---
+#                            ---  https://meal-delivery.netlify.app/dashboard ---
+#                   -------------Railway is 10000x beter dan Azure en Netlify is <3-------------
 
 # jobs:       !!!!!!!!!!!!  You've used 90% of included services for GitHub Actions    !!!!!!!!!!!!
 #   build:
