--- a/apps/meal-delivery-api/.eslintrc.json
+++ b/apps/meal-delivery-api/.eslintrc.json
@@ -7,7 +7,8 @@
       "rules": {
         "no-empty-function": "off",
         "@typescript-eslint/no-empty-function": "off",
-        "@angular-eslint/no-empty-lifecycle-method": "off"
+        "@angular-eslint/no-empty-lifecycle-method": "off",
+        "@typescript-eslint/no-inferrable-types": "off"
       }
     },
     {
