--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "bootstrap": "^5.2.3",
     "cypress": "^11.2.0",
     "jsonwebtoken": "^8.5.1",
+    "mongodb-memory-server": "^8.10.1",
     "mongoose": "^6.7.3",
     "path-browserify": "^1.0.1",
     "querystring-es3": "^0.2.1",
