--- a/apps/meal-delivery-api/.eslintrc.json
+++ b/apps/meal-delivery-api/.eslintrc.json
@@ -8,7 +8,8 @@
         "no-empty-function": "off",
         "@typescript-eslint/no-empty-function": "off",
         "@angular-eslint/no-empty-lifecycle-method": "off",
-        "@typescript-eslint/no-inferrable-types": "off"
+        "@typescript-eslint/no-inferrable-types": "off",
+        "@typescript-eslint/no-unused-vars": "off"
       }
     },
     {
