--- a/apps/meal-delivery-api/.eslintrc.json
+++ b/apps/meal-delivery-api/.eslintrc.json
@@ -9,7 +9,8 @@
         "@typescript-eslint/no-empty-function": "off",
         "@angular-eslint/no-empty-lifecycle-method": "off",
         "@typescript-eslint/no-inferrable-types": "off",
-        "@typescript-eslint/no-unused-vars": "off"
+        "@typescript-eslint/no-unused-vars": "off",
+        "@typescript-eslint/no-non-null-assertion": "off"
       }
     },
     {
