--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bcrypt": "^5.1.0",
     "bootstrap": "^5.2.3",
     "cypress": "^11.2.0",
+    "dotenv": "^16.0.3",
     "jsonwebtoken": "^8.5.1",
     "mongodb-memory-server": "^8.10.1",
     "mongoose": "^6.7.3",
