--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cypress": "^11.2.0",
     "dotenv": "^16.0.3",
     "jsonwebtoken": "^9.0.0",
+    "jwt-decode": "^3.1.2",
     "mongodb-memory-server": "^8.10.1",
     "mongoose": "^6.7.3",
     "path-browserify": "^1.0.1",
