Fix orderlist ownername

--- a/apps/meal-delivery-api/.eslintrc.json
+++ b/apps/meal-delivery-api/.eslintrc.json
@@ -10,7 +10,8 @@
         "@angular-eslint/no-empty-lifecycle-method": "off",
         "@typescript-eslint/no-inferrable-types": "off",
         "@typescript-eslint/no-unused-vars": "off",
-        "@typescript-eslint/no-non-null-assertion": "off"
+        "@typescript-eslint/no-non-null-assertion": "off",
+        "@typescript-eslint/no-explicit-any": "off"
       }
     },
     {
