--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "rxjs": "^7.0.0",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
+    "supertest": "^6.3.3",
     "tslib": "^2.3.0",
     "url": "^0.11.0",
     "util": "^0.12.5",
