--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "supertest": "^6.3.3",
-    "tslib": "^2.3.0",
     "url": "^0.11.0",
     "util": "^0.12.5",
     "uuid": "^9.0.0",
@@ -73,7 +72,7 @@
     "@types/jasmine": "~3.10.0",
     "@types/jest": "28.1.1",
     "@types/jsonwebtoken": "^8.5.9",
-    "@types/node": "18.7.1",
+    "@types/node": "^18.7.1",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
@@ -93,6 +92,7 @@
     "prettier": "^2.6.2",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
+    "tslib": "^2.6.1",
     "typescript": "^4.8.2"
   }
 }
